# jira-cli

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
assets/: SKILL.md
docker/: docker-compose.yml  wait-for-jira.sh
src/: config.rs  lib.rs  main.rs  output.rs  test_support.rs
src/api/: client.rs  mod.rs  types.rs
src/commands/: boards.rs  fields.rs  issues.rs  mod.rs  myself.rs  projects.rs  search.rs  skills.rs  sprints.rs  users.rs
tests/: cli.rs  e2e.rs  integration.rs
