[package]
name = "jira-cli"
version = "0.3.7"
edition = "2024"
rust-version = "1.90"
description = "Agent-friendly Jira CLI with JSON output, structured exit codes, and schema introspection"
license = "MIT"
repository = "https://github.com/rvben/jira-cli"
homepage = "https://github.com/rvben/jira-cli"
keywords = ["jira", "atlassian", "cli", "issues"]
categories = ["command-line-utilities"]

[[bin]]
name = "jira"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
toml = "0.8"
owo-colors = "4"
dirs = "6"
base64 = "0.22"

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"
assert_cmd = "2"
predicates = "3"
